# tosser

./: .env.example  .flaskenv.example  .gitignore  Dockerfile  LICENSE  Makefile  README.md  example.py  pyproject.toml  run.py  setup.cfg  test.json
.github/sample_hook/: pre-commit
.github/workflows/: test.yml  tosser_test.yml
docs/: design.md
docs/config/: config.tosser.jsonc  main.jsonc  map.tosser.jsonc
requirements/: requirements.txt  requirements_dev.txt  requirements_dev_lock.txt  requirements_lock.txt
scratch/: one.txt
scripts/: fields.txt  generate_data.py  objects.txt  test_rules.py  values.txt
src/: ingest.py  logger.py  map.py  transactions.py
src/connections/: BaseConnection.py  __init__.py
src/parsers/: Base.py  __init__.py
src/tosser/: __init__.py  configd.py  constants.py  context.py  exceptions.py  generate.py  ingest.py  logs.py  map.py  object.py  rules.py  schema.py  schema_types.py  settings.py  tosser.py  transactions.py  traverse.py  types.py  util.py
src/tosser/connections/: Connection.py  MySQLConn.py  __init__.py
src/tosser/endpoint/: Endpoint.py  Source.py  Target.py  __init__.py
src/tosser/endpoint/source/: __init__.py  file.py  source.py
src/tosser/parsers/: Base.py  Parser.py  __init__.py  common.py
src/tosser/scripts/: __init__.py
src/tosser_browser/: __init__.py  api.py  app.py  logs.py
src/tosser_browser/html/: index.html
src/tosser_cli/: __init__.py  cli.py
src/tosser_http/: __init__.py  api.py  app.py
test/code/transactions/: fix.py  test_db_conn.py
test/configs/endpoints/: detail.json  file.json
test/configs/schema/basic/: map.json
test/configs/schema/basic/tables.d/: @meta.table.json  users.table.json
test/content/: basic.data.json
test/schema/: test_schema.py
tests/basic/: basic.data.json  config.json
tests/basic/tables.d/: users.table.col.json
tests/code/parsers/: test_json_parser.py
tests/configs/endpoints/: mysql.json
tests/configs/raw/basic/: rules.json
tests/configs/schema/basic/: config.json
tests/configs/schema/basic/config.d/: default.json
tests/configs/schema/basic/tables.d/: users.table.json
tests/transactions/: test_db_conn.py
workdir/: map.tosser.json  schema.ex.toss  schema.toss
