[build-system]
requires = [
    "setuptools>=61.0"
]
build-backend = "setuptools.build_meta"

[project]
name = "doc2sql"
version = "0.0.1"
authors = [
  { name="Nate Schutte", email="natecodenew@gmail.com" },
]
description = "Convert and ingest objects to relational schema"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Source" = "https://github.com/nathanielschutte/doc2sql"

[tool.pytest.ini_options]
addopts = [
    "--import-mode=importlib",
]
