[build-system]
requires = ["setuptools>=42.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "tosser"
version = "0.0.1"
authors = [{name="Nate Schutte", email="natecodenew@gmail.com" }]
description = "JSON to relational database ingester"
readme = "README.md"
dependencies = [
    "requests>=2",
    "pymysql>=1.0",
    "typer>=0.9.0",
    "rich>=13.5.3",
    "aiofiles==23.2.1",
    "python-dotenv==1.0.0",
    "pydantic==2.4.2",
    "pydantic_core==2.10.1",
    "databases==0.8.0",
    "SQLAlchemy==1.4.49"
]
requires-python = ">=3.9"

[project.scripts]
toss = "tosser_cli:main"

[tool.pytest.ini_options]
addopts = "--cov=tosser"
testpaths = [
    "tests",
]

[tool.mypy]
mypy_path = "src"
check_untyped_defs = true
disallow_any_generics = true
ignore_missing_imports = true
no_implicit_optional = true
show_error_codes = true
strict_equality = true
warn_redundant_casts = true
warn_return_any = true
warn_unreachable = true
warn_unused_configs = true
no_implicit_reexport = true
